* stratego-transformer: changed -o to --gen-dir. Use --gen-dir to specify in which directory the generated files will be placed  * debug.stratego.test: DSM tests now pass with the current transformer
svn path=/spoofax-imp/trunk/org.strategoxt.imp.debug.stratego.core/; revision=21752